# tmotor_controller

./: CMakeLists.txt  README.md  package.xml
include/tmotor_controller/: MotorManager.h  TMotor.h  TMotorAK10_9.h  TMotorAK60_6.h  TMotorAK80_80.h
src/: MotorManager.cpp  TMotor.cpp  canbus.cpp  joystick_controller.cpp  motor_controller.cpp
